# flytrap

./: Cargo.toml  README.md
backend/: Cargo.toml  flytrap.toml
backend/src/: cli.rs  config.rs  datatype.rs  db.rs  lib.rs  main.rs
backend/src/api/: error.rs  mod.rs  req.rs
backend/src/api/handler/: mod.rs  request.rs
backend/src/api/resp/: mod.rs
backend/src/model/: request.rs  testcase.rs  variable.rs
basemodel/: Cargo.toml
basemodel/src/: lib.rs
migrations/: 20230617083811_request.sql
src/: app.rs  config.rs  db.rs  lib.rs  log.rs  main.rs
src/api/: error.rs  mod.rs  resp.rs
src/api/v1/: execution.rs  mod.rs  request.rs
src/common/: macros.rs  mod.rs
src/entity/: execution.rs  mod.rs  request.rs  response.rs
src/model/: mod.rs  testcase.rs  variable.rs
src/service/: execution.rs
traits/src/: lib.rs
