[package]
authors = ["dox4 <dox4@foxmail.com>"]
definition = "A simple HTTP server for testing and debugging"
edition = "2021"
name = "flytrap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = {version = "0.6.18", features = ["http2", "headers"]}
chrono = {version = "0.4.26", features = ["serde"]}
clap = {version = "4.3.3", features = ["derive"]}
clap_derive = "4.3.2"
once_cell = "1.18.0"
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
sql-builder = "3.1.1"
sqlx = {version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "mysql",
  "time",
  "chrono",
  "macros",
  "all-types",
]}
sqlx-crud = {git = "https://github.com/dox4/sqlx-crud.git", version = "0.4.0", features = [
  "default_mysql",
]}
thiserror = "1.0.40"
tokio = {version = "1.28.2", features = ["full"]}
toml = "0.7.4"
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["full", "trace"]}
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["json", "std", "fmt"]}
uuid = {version = "1.3.3", features = ["v4", "serde"]}
