[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.9", features = ["http2", "headers"] }
sea-orm = { version = "0.11.0", features = ["with-chrono", "serde_json", "sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sql-builder = { git = "https://github.com/dox4/sql-builder.git", version = "0.1.0" }
thiserror = "1.0.39"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["std", "json", "fmt"] }
