[package]
edition = "2021"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.7", features = ["http2", "headers"] }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
getset = "0.1.2"
once_cell = "1.17.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full", "trace"] }
tracing = { version = "0.1.37", features = ["std"] }
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["std", "json", "fmt"] }

basemodel = { path = "../basemodel" }
sqlx = { version = "0.6.2", features = [
  "mysql",
  "chrono",
  "all-types",
  "runtime-tokio-rustls",
  "time",
] }
sql-builder = { path = "../../sql-builder" }
uuid = { version = "1.3.0", features = ["v4", "serde"] }
