[lib]
proc-macro = true

[package]
edition = "2021"
name = "basemodel"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = {version = "1.0.109", features = ["full"]}
